# Random-Shit

./: TCS 1.cpp
001/: 001.asta
8 Queen/: 8 Queen.sln
8 Queen/8 Queen/: 8 Queen.vcxproj  8 Queen.vcxproj.filters  main.cpp
8 Queen/Release/: 8 Queen.iobj  8 Queen.ipdb
8Queens/: 8Queens.sln
8Queens -  Hill Climbing/: main.cpp
8Queens -  Hill Climbing/8Queens/: 8Queens.vcxproj
8Queens - Genetic Algorithm/: 8Queens - Genetic Algorithm.sln
8Queens - Genetic Algorithm/8Queens - Genetic Algorithm/: main.cpp
8Queens/8Queens/: 8Queens.vcxproj.filters
Asm - Mips/: quickSort.s  stack.s
BattleGame - QtCreator/: BattleGame.pro  BattleGame.pro.user.2.5pre1  Makefile  configdialog.cpp  configdialog.h  configdialog.ui  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderarea.cpp  renderarea.h  renderareastatus.cpp  renderareastatus.h
BattleGame - QtCreator/Class/: action.h  game.cpp  game.h  (+2 more)
Breakout/: Breakout  Breakout.pro  Readme.txt  a.out  main.cpp  mainlua.cpp  mainlua.h  rsc.qrc
Bresenham/: gc.py
BridgePattern/: CMakeLists.txt  diagram.asta  diagram2.asta  main.cpp
BridgePattern/include/glad/: glad.c  glad.h
BridgePattern/src/: draw.h  shape.h
SnakeGame/: SnakeGame.sln
TowerOfHanoi/: TowerOfHanoi2.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  queue.cpp  queue.h  renderarea.cpp  renderarea.h  stack.cpp  stack.h  towerofhanoi.h
VeerasChat/: build.gradle
django-polls/: README.rst
lgpjc/: manage.py  mydatabase
mazecatlikecoding/: progress.txt
minidungeons/: .classpath  .project
(+356 files in other folders)
